# simd-experiments

./: README.md
results/: cpu-info.txt  lenovo-native.csv
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.hpp  buffer.hpp  difference.cpp  main.cpp  random_numbers.hpp  stats.hpp  util.hpp
src/tests/: CMakeLists.txt  test_random.cpp  test_simd.cpp
